Add new 1.9 contributors

--- a/content/community/contributing.adoc
+++ b/content/community/contributing.adoc
@@ -34,6 +34,7 @@ See the full <<contributors#,list of contributors>> that have signed the Clojure
 * Aaron Bedra
 * Aaron Cohen
 * Achim Passen
+* Adam Clements
 * Alan Dipert
 * Alan Malloy
 * Alexander Yakushev
@@ -62,6 +63,8 @@ See the full <<contributors#,list of contributors>> that have signed the Clojure
 * Brian Hurt
 * Brian Taylor
 * Bruce Adams
+* Cameron Desautels
+* Chad Taylor
 * Chas Emerick
 * Chris Gray
 * Chris Houser
@@ -74,6 +77,7 @@ See the full <<contributors#,list of contributors>> that have signed the Clojure
 * Cosmin Stejerean
 * Daniel Compton
 * Daniel Solano Gómez
+* David Bürgin
 * David Liebke
 * David McNeil
 * David Miller
@@ -85,6 +89,7 @@ See the full <<contributors#,list of contributors>> that have signed the Clojure
 * Dimitry Gashinsky
 * Drew Raines
 * Ed Bowler
+* Eli Lindsey
 * Eric Schoonover
 * Erik Assum
 * Federico Brubacher
@@ -92,8 +97,10 @@ See the full <<contributors#,list of contributors>> that have signed the Clojure
 * Gabriel Horner
 * Gary Fredericks
 * George Jahad
+* Gerrit Jansen Van Vuuren
 * Ghadi Shayban
 * Gordon Syme
+* Greg Leppert
 * Herwig Hochleitner
 * Howard Lewis Ship
 * Hubert Iwaniuk
@@ -102,9 +109,11 @@ See the full <<contributors#,list of contributors>> that have signed the Clojure
 * James Reeves
 * Jarkko Oranen
 * Jason Wolfe
+* Jason Whitlark
 * Jean Niklas L'orange
 * Jeremy Heiler
 * Joe Gallo
+* Johan Mena
 * John Szakmeister
 * Jonas Enlund
 * Jozef Wagner
@@ -117,9 +126,11 @@ See the full <<contributors#,list of contributors>> that have signed the Clojure
 * Kurt Harriger
 * Laurent Petit
 * Lauri Pesonen
+* Lee Yen-Chin
 * Luke VanderHart
 * Mark Simpson
 * Matt Revelle
+* Matthew Boston
 * Max Penet
 * Meikel Brandmeyer
 * Micah Martin
@@ -146,11 +157,13 @@ See the full <<contributors#,list of contributors>> that have signed the Clojure
 * Rich Hickey
 * Richard Newman
 * Robert Lachlan
+* Ruslan Al-Fakikh
 * Russ Olsen
 * Scott Lowe
 * Sean Devlin
 * Shogo Ohta
 * Stefan Kamphausen
+* Steffen Dienst
 * Stephen C. Gilardi
 * Steve Miner
 * Steven Yi
@@ -167,6 +180,8 @@ See the full <<contributors#,list of contributors>> that have signed the Clojure
 * Tsutomu Yano
 * Vipul Amler
 * Yanxiang Lou
+* Yegor Timoshenko
 * Zach Tellman
+* Zhuang XiaoDan
 
 _**Many thanks for your contributions to Clojure!**_
